package io.github.bmb0136.maestro.core.event;

import io.github.bmb0136.maestro.core.timeline.Timeline;

public abstract class TimelineEvent extends Event<Timeline> {
}
